--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/flaturtha/NOS",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^3.0.0",
     "grunt-browser-sync": "^1.5.3",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jekyll": "^0.4.2",
+    "grunt-postcss": "^0.4.0",
     "grunt-sass": "^0.17.0",
     "time-grunt": "^1.0.0"
   }
