--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-jekyll": "^0.4.2",
     "grunt-postcss": "^0.4.0",
     "grunt-sass": "^1.0.0",
+    "isotope-layout": "^2.2.2",
     "time-grunt": "^1.0.0"
   }
 }
